# smalltalk

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bootstrap_cmd.py  checker.py  cli.py  converter.py  hook_cmd.py  instructions_cmd.py  kg.py  kg_viz.py  mcp_server.py  mine.py  palace.py  parser.py  pyproject.toml  requirements.txt  route.py  router.py  searcher.py  wake_up.py  watch_cmd.py
.agents/plugins/smalltalk/: SKILL.md
.claude-plugin/: README.md  plugin.json
.claude-plugin/skills/smalltalk/: SKILL.md
.codex-plugin/: README.md  plugin.json
.codex-plugin/skills/backup/: SKILL.md
.codex-plugin/skills/help/: SKILL.md
.codex-plugin/skills/init/: SKILL.md
.codex-plugin/skills/mine/: SKILL.md
.codex-plugin/skills/status/: SKILL.md
_brain/: _index.st  decisions.st  patterns.st
_brain/patterns/: patterns.st  powershell-claude-cli.md  smalltalk-kg-detection.md
docs/: getting-started.md  icm-integration.md  local-model-philosophy.md  setup.md
examples/: _index.st  waza-habits.md  waza-habits.st
examples/agents/: api-testing-agent.st  code-review-agent.st  content-strategist-pro.md  content-strategist-pro.st  data-pipeline-agent.st  debugging-agent.st  deployment-agent.st  documentation-agent.st  migration-agent.st  onboarding-agent.st  performance-agent.st  pr-review-agent.st  refactor-agent.st  release-manager-agent.st  security-audit-agent.st  seo-audit-agent.st  session-end-ritual.st  test-generator-agent.st
examples/hooks/: CLAUDE.md
examples/knowledge-graph/: contradiction-resolution.st  kg.html  solopreneur-brain.st  team-brain.st
examples/memory/: brain-entries.st  dev-team-brain.st  product-team-brain.st  solopreneur-brain.st
examples/skills/architecture/: api-designer.st  architecture-designer.st  microservices-architect.st  rag-architect.st
examples/skills/backend/: django-expert.st  fastapi-expert.st  golang-pro.st  nodejs-pro.st  python-pro.st
examples/skills/database/: database-optimizer.st  postgres-pro.st  sql-pro.st
examples/skills/frontend/: nextjs-developer.st  react-expert.st  tailwind-expert.st  typescript-pro.st  vue-expert.st
examples/skills/infrastructure/: cloud-architect.st  devops-engineer.st  kubernetes-specialist.st  terraform-engineer.st
examples/skills/quality/: code-reviewer.st  debugging-wizard.st  security-reviewer.st  test-master.st
examples/skills/workflow/: code-review.st  deployment.st  git-workflow.st  prompt-engineer.st  (+1 more)
instructions/: backup.md  bootstrap.md  check.md  closing-ritual.md  help.md  init.md  kg.md  palace.md  route.md  status.md
smalltalk/: backup.py  cli.py  converter.py  diary.py  init_cmd.py  instructions_cmd.py  kg.py  kg_viz.py  mcp_server.py  mine.py  palace_cmd.py  router.py  status.py  wake_up.py
smalltalk/instructions/: diary.md  help.md  mine.md  wake-up.md
smalltalk_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
spec/: compression-guide.md  grammar.md
tests/: __init__.py  test_checker.py  test_kg.py  test_palace.py  test_parser.py  test_viz.py  test_wake_up.py
