[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smalltalk-cli"
version = "3.0.1"
description = "PAG — Pre-loaded Augmented Generation for AI agents. Compress to .st format. 90% fewer tokens. Palace navigation. MCP server (18 tools). Closing ritual closes the loop."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=10.11.0",
    "mcp>=1.0.0",
]

[project.scripts]
smalltalk = "smalltalk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smalltalk*"]

[tool.setuptools.package-data]
smalltalk = ["instructions/*.md"]
