[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smalltalk-cli"
version = "3.1.0"
description = "Institutional memory for AI agents. Structured decisions, contradiction detection, and a compounding PAG loop. 20 MCP tools. Zero infrastructure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=10.11.0",
    "mcp>=1.0.0",
]

[project.scripts]
smalltalk = "smalltalk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smalltalk*"]

[tool.setuptools.package-data]
smalltalk = ["instructions/*.md", "examples/hooks/*", "examples/**/*.st"]
