[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smalltalk-cli"
version = "4.0.0"
description = "Institutional memory for AI agents. Structured decisions, contradiction detection, per-response drift prevention, and a compounding PAG loop. 25 MCP tools. Zero infrastructure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "memory", "context", "mcp", "llm", "pag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=10.11.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ApexAutomate/smalltalk"
Repository = "https://github.com/ApexAutomate/smalltalk"
Issues = "https://github.com/ApexAutomate/smalltalk/issues"

[project.scripts]
smalltalk = "smalltalk.cli:main"
smalltalk-serve = "smalltalk.server:_serve_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["smalltalk*"]

[tool.setuptools.package-data]
smalltalk = [
    "instructions/*.md",
    "examples/hooks/*",
    "examples/**/*.st",
    "docs/*.md",
    "spec/*.md",
]
